--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Ifitnessdmos5">
         <activity
+            android:name=".activitys.RankingActivity"
+            android:exported="false" />
+        <activity
             android:name=".activitys.SingUpActivity"
             android:exported="false" />
         <activity
