--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
         android:theme="@style/Theme.Ifitnessdmos5">
         <activity
             android:name=".activitys.RankingActivity"
+            android:exported="false" />
+        <activity
             android:name=".activitys.ProfileActivity"
             android:exported="false" />
         <activity
