[7.1] Implementação Tela de Adição da Atividade

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
             android:name=".activitys.StatisticActivity"
             android:exported="false" />
         <activity
+            android:name=".activitys.NewSportActivity"
+            android:exported="false" />
+        <activity
             android:name=".activitys.LoginActivity"
             android:exported="false" />
         <activity
